			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04a: *********************************

BUG: (10/06/05, SMR) New "Layers" tab doesn't always show the preview.
FIX: Made the preview be separate from the color chooser.

BUG: (10/06/05, SMR) Cell frames are not visible when the background is black (Bug #615).
FIX: Use proper color, not black.

BUG: (10/06/05, SMR) Printing schematics and layout is wrong.
FIX: In EditWindow.paint() and EditWindow.repaintContents(), ignore windows with no frame.

IMP: (10/06/05, DN) In many places generic type parameters are added for static type-checking.
     runAll4.sh script is added to regressions of main branch by Java 1.4 .

IMP: (10/05/05, SMR) Title box now defaults the designer name to the current user (Bug #609).

IMP: (10/05/05, GVG) Extra dialog for bug 588 to avoid exception message.

BUG: (10/05/05, GVG) KeyBinding explorer tree did't describe properly keybinding like '>'
     due to keyCode = KeyEvent.VK_UNDEFINED (Bug #604).
FIX: Apply getChar in this case.

BUG: (10/05/05, SMR) Spice output doesn't notice header/trailer files in
     directories that are not where the library came from (Bug #594).
FIX: In "Spice.writeHeader()" and "Spice.writeTrailer()", use current output file's directory.

IMP: (10/05/05, SMR) New command in SDI mode: "Window / Remember Location of Display"
     saves initial window location.

BUG: (10/05/05, SMR) Zooming-out (with Shift key) while editing down-in-place fails (Bug #492).
FIX: In ZoomAndPanListener.mouseReleased(), transform coordinates when down-in-place.

BUG: (10/05/05, SMR) Outline edit mode places new points in strange locations (Bug #154).
FIX: In OutlineListener.mousePressed(), take new point from cursor.

BUG: (10/05/05, SMR) Importing preferences doesn't update layer appearance (Bug #601).
FIX: Must recache all EGraphics information after importing preferences.
