@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04a: *********************************
 
+BUG: (10/06/05, SMR) Colors are not updated after importing preferences.
+FIX: Added recaching to EGraphics, delayed background caching to PixelDrawing.
+
 BUG: (10/06/05, SMR) New "Layers" tab doesn't always show the preview.
 FIX: Made the preview be separate from the color chooser.
 
